--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,11 @@ __pycache__
 /venv
 /tmp
 /model.ckpt
-/models/**/*
+
 /GFPGANv1.3.pth
 /gfpgan/weights/*.pth
 /ui-config.json
-/outputs
+/outputs/*
 /config.json
 /log
 /webui.settings.bat
